--- a/BALANCA/app/src/main/res/layout/activity_main.xml
+++ b/BALANCA/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,343 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:fontFamily="sans-serif"
+        android:text="Sistema de Pesagem Avulsa"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.064" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Placa"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="117dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cliente"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="152dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bruto"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="188dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tara"
+        tools:layout_editor_absoluteX="17dp"
+        tools:layout_editor_absoluteY="225dp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Desconto"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="265dp" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Liquido"
+        tools:layout_editor_absoluteX="17dp"
+        tools:layout_editor_absoluteY="305dp" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Observação"
+        tools:layout_editor_absoluteX="17dp"
+        tools:layout_editor_absoluteY="342dp" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tipo de Veiculo"
+        tools:layout_editor_absoluteX="17dp"
+        tools:layout_editor_absoluteY="385dp" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pesagem Avulsa"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="80dp" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Primeira Pesagem"
+        tools:layout_editor_absoluteX="18dp"
+        tools:layout_editor_absoluteY="425dp" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Segunda Pesagem"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="503dp" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Data"
+        tools:layout_editor_absoluteX="76dp"
+        tools:layout_editor_absoluteY="458dp" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Data"
+        tools:layout_editor_absoluteX="76dp"
+        tools:layout_editor_absoluteY="541dp" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hora"
+        tools:layout_editor_absoluteX="239dp"
+        tools:layout_editor_absoluteY="458dp" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hora"
+        tools:layout_editor_absoluteX="239dp"
+        tools:layout_editor_absoluteY="541dp" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Busca o Peso de Tara no Cadastro da Placa"
+        tools:layout_editor_absoluteX="20dp"
+        tools:layout_editor_absoluteY="585dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Busca Placa"
+        tools:layout_editor_absoluteX="133dp"
+        tools:layout_editor_absoluteY="611dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Salvar"
+        tools:layout_editor_absoluteX="20dp"
+        tools:layout_editor_absoluteY="611dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancelar"
+        tools:layout_editor_absoluteX="290dp"
+        tools:layout_editor_absoluteY="611dp" />
+
+    <EditText
+        android:id="@+id/editTextText"
+        android:layout_width="165dp"
+        android:layout_height="19dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Name"
+        tools:layout_editor_absoluteX="105dp"
+        tools:layout_editor_absoluteY="118dp" />
+
+    <EditText
+        android:id="@+id/editTextText4"
+        android:layout_width="283dp"
+        android:layout_height="20dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Name"
+        tools:layout_editor_absoluteX="104dp"
+        tools:layout_editor_absoluteY="341dp" />
+
+    <EditText
+        android:id="@+id/editTextText5"
+        android:layout_width="165dp"
+        android:layout_height="19dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Name"
+        tools:layout_editor_absoluteX="123dp"
+        tools:layout_editor_absoluteY="385dp" />
+
+    <EditText
+        android:id="@+id/editTextText2"
+        android:layout_width="257dp"
+        android:layout_height="20dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Name"
+        tools:layout_editor_absoluteX="105dp"
+        tools:layout_editor_absoluteY="151dp" />
+
+    <EditText
+        android:id="@+id/editTextText6"
+        android:layout_width="101dp"
+        android:layout_height="20dp"
+        android:ems="10"
+        android:inputType="text"
+        tools:layout_editor_absoluteX="286dp"
+        tools:layout_editor_absoluteY="264dp" />
+
+    <EditText
+        android:id="@+id/editTextNumber"
+        android:layout_width="38dp"
+        android:layout_height="19dp"
+        android:ems="10"
+        android:inputType="number"
+        tools:layout_editor_absoluteX="325dp"
+        tools:layout_editor_absoluteY="117dp" />
+
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="N"
+        tools:layout_editor_absoluteX="308dp"
+        tools:layout_editor_absoluteY="117dp" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="24dp"
+        android:layout_height="20dp"
+        android:text="Lupa"
+        tools:layout_editor_absoluteX="272dp"
+        tools:layout_editor_absoluteY="118dp" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="110dp"
+        android:layout_height="19dp"
+        android:text="Busca Peso"
+        tools:layout_editor_absoluteX="286dp"
+        tools:layout_editor_absoluteY="187dp" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="110dp"
+        android:layout_height="19dp"
+        android:text="Busca Peso"
+        tools:layout_editor_absoluteX="286dp"
+        tools:layout_editor_absoluteY="226dp" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="24dp"
+        android:layout_height="20dp"
+        android:text="Lupa"
+        tools:layout_editor_absoluteX="371dp"
+        tools:layout_editor_absoluteY="152dp" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="24dp"
+        android:layout_height="20dp"
+        android:text="Lupa"
+        tools:layout_editor_absoluteX="371dp"
+        tools:layout_editor_absoluteY="117dp" />
+
+    <EditText
+        android:id="@+id/editTextNumber2"
+        android:layout_width="165dp"
+        android:layout_height="18dp"
+        android:ems="10"
+        android:inputType="number"
+        tools:layout_editor_absoluteX="105dp"
+        tools:layout_editor_absoluteY="188dp" />
+
+    <EditText
+        android:id="@+id/editTextNumber3"
+        android:layout_width="165dp"
+        android:layout_height="18dp"
+        android:ems="10"
+        android:inputType="number"
+        tools:layout_editor_absoluteX="104dp"
+        tools:layout_editor_absoluteY="226dp" />
+
+    <EditText
+        android:id="@+id/editTextNumber4"
+        android:layout_width="165dp"
+        android:layout_height="18dp"
+        android:ems="10"
+        android:inputType="number"
+        tools:layout_editor_absoluteX="104dp"
+        tools:layout_editor_absoluteY="265dp" />
+
+    <EditText
+        android:id="@+id/editTextNumber5"
+        android:layout_width="165dp"
+        android:layout_height="18dp"
+        android:ems="10"
+        android:inputType="number"
+        tools:layout_editor_absoluteX="104dp"
+        tools:layout_editor_absoluteY="305dp" />
+
+    <EditText
+        android:id="@+id/editTextDate"
+        android:layout_width="100dp"
+        android:layout_height="19dp"
+        android:ems="10"
+        android:inputType="date"
+        tools:layout_editor_absoluteX="124dp"
+        tools:layout_editor_absoluteY="458dp" />
+
+    <EditText
+        android:id="@+id/editTextDate2"
+        android:layout_width="100dp"
+        android:layout_height="19dp"
+        android:ems="10"
+        android:inputType="date"
+        tools:layout_editor_absoluteX="124dp"
+        tools:layout_editor_absoluteY="541dp" />
+
+    <EditText
+        android:id="@+id/editTextTime"
+        android:layout_width="103dp"
+        android:layout_height="18dp"
+        android:ems="10"
+        android:inputType="time"
+        tools:layout_editor_absoluteX="284dp"
+        tools:layout_editor_absoluteY="459dp" />
+
+    <EditText
+        android:id="@+id/editTextTime2"
+        android:layout_width="103dp"
+        android:layout_height="18dp"
+        android:ems="10"
+        android:inputType="time"
+        tools:layout_editor_absoluteX="284dp"
+        tools:layout_editor_absoluteY="542dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
