--- a/BALANCA/app/src/main/res/layout/activity_main.xml
+++ b/BALANCA/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
@@ -23,56 +24,78 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Placa"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="117dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toStartOf="@+id/editTextText"
+        app:layout_constraintHorizontal_bias="0.246"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintVertical_bias="0.433" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cliente"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="152dp" />
+        app:layout_constraintEnd_toStartOf="@+id/editTextText2"
+        app:layout_constraintHorizontal_bias="0.258"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="153dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="Bruto"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="188dp" />
+        app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Tara"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="225dp" />
+        app:layout_constraintEnd_toStartOf="@+id/editTextNumber3"
+        app:layout_constraintHorizontal_bias="0.21"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Desconto"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="265dp" />
+        app:layout_constraintEnd_toStartOf="@+id/editTextNumber4"
+        app:layout_constraintHorizontal_bias="0.355"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Liquido"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="305dp" />
+        app:layout_constraintEnd_toStartOf="@+id/editTextNumber5"
+        app:layout_constraintHorizontal_bias="0.344"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Observação"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="342dp" />
+        app:layout_constraintEnd_toStartOf="@+id/editTextText4"
+        app:layout_constraintHorizontal_bias="0.551"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView9"
@@ -86,109 +109,129 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Pesagem Avulsa"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="80dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.052"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="Primeira Pesagem"
-        tools:layout_editor_absoluteX="18dp"
-        tools:layout_editor_absoluteY="425dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Segunda Pesagem"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="503dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="Data"
-        tools:layout_editor_absoluteX="76dp"
-        tools:layout_editor_absoluteY="458dp" />
+        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Data"
-        tools:layout_editor_absoluteX="76dp"
-        tools:layout_editor_absoluteY="541dp" />
+        app:layout_constraintEnd_toStartOf="@+id/editTextDate2"
+        app:layout_constraintHorizontal_bias="0.463"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="Hora"
-        tools:layout_editor_absoluteX="239dp"
-        tools:layout_editor_absoluteY="458dp" />
-
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hora"
-        tools:layout_editor_absoluteX="239dp"
-        tools:layout_editor_absoluteY="541dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        tools:layout_editor_absoluteX="239dp" />
 
     <TextView
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Busca o Peso de Tara no Cadastro da Placa"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="585dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Busca Placa"
-        tools:layout_editor_absoluteX="133dp"
-        tools:layout_editor_absoluteY="611dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        tools:layout_editor_absoluteX="133dp" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Salvar"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="611dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancelar"
-        tools:layout_editor_absoluteX="290dp"
-        tools:layout_editor_absoluteY="611dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <EditText
         android:id="@+id/editTextText"
         android:layout_width="165dp"
         android:layout_height="19dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="4dp"
         android:ems="10"
         android:inputType="text"
         android:text="Name"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="118dp" />
+        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
     <EditText
         android:id="@+id/editTextText4"
         android:layout_width="283dp"
         android:layout_height="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
         android:inputType="text"
         android:text="Name"
-        tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="341dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber5" />
 
     <EditText
         android:id="@+id/editTextText5"
@@ -204,11 +247,13 @@
         android:id="@+id/editTextText2"
         android:layout_width="257dp"
         android:layout_height="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="text"
         android:text="Name"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="151dp" />
+        app:layout_constraintEnd_toStartOf="@+id/button6"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
 
     <EditText
         android:id="@+id/editTextText6"
@@ -216,40 +261,45 @@
         android:layout_height="20dp"
         android:ems="10"
         android:inputType="text"
-        tools:layout_editor_absoluteX="286dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editTextNumber4"
         tools:layout_editor_absoluteY="264dp" />
 
     <EditText
         android:id="@+id/editTextNumber"
         android:layout_width="38dp"
         android:layout_height="19dp"
+        android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="325dp"
-        tools:layout_editor_absoluteY="117dp" />
+        app:layout_constraintEnd_toStartOf="@+id/button5"
+        tools:layout_editor_absoluteY="118dp" />
 
     <TextView
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:text="N"
-        tools:layout_editor_absoluteX="308dp"
-        tools:layout_editor_absoluteY="117dp" />
+        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
+        tools:layout_editor_absoluteY="118dp" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="24dp"
         android:layout_height="20dp"
+        android:layout_marginEnd="8dp"
         android:text="Lupa"
-        tools:layout_editor_absoluteX="272dp"
-        tools:layout_editor_absoluteY="118dp" />
+        app:layout_constraintEnd_toStartOf="@+id/textView18"
+        tools:layout_editor_absoluteY="117dp" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="110dp"
         android:layout_height="19dp"
         android:text="Busca Peso"
-        tools:layout_editor_absoluteX="286dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
         tools:layout_editor_absoluteY="187dp" />
 
     <Button
@@ -257,42 +307,48 @@
         android:layout_width="110dp"
         android:layout_height="19dp"
         android:text="Busca Peso"
-        tools:layout_editor_absoluteX="286dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editTextNumber3"
         tools:layout_editor_absoluteY="226dp" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="24dp"
         android:layout_height="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:text="Lupa"
-        tools:layout_editor_absoluteX="371dp"
-        tools:layout_editor_absoluteY="152dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="24dp"
         android:layout_height="20dp"
+        android:layout_marginEnd="16dp"
         android:text="Lupa"
-        tools:layout_editor_absoluteX="371dp"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="117dp" />
 
     <EditText
         android:id="@+id/editTextNumber2"
         android:layout_width="165dp"
         android:layout_height="18dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="188dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
+        tools:layout_editor_absoluteX="104dp" />
 
     <EditText
         android:id="@+id/editTextNumber3"
         android:layout_width="165dp"
         android:layout_height="18dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="226dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
+        tools:layout_editor_absoluteX="104dp" />
 
     <EditText
         android:id="@+id/editTextNumber4"
@@ -307,45 +363,65 @@
         android:id="@+id/editTextNumber5"
         android:layout_width="165dp"
         android:layout_height="18dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="140dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="305dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4" />
 
     <EditText
         android:id="@+id/editTextDate"
         android:layout_width="100dp"
         android:layout_height="19dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="32dp"
         android:ems="10"
         android:inputType="date"
-        tools:layout_editor_absoluteX="124dp"
-        tools:layout_editor_absoluteY="458dp" />
+        app:layout_constraintEnd_toStartOf="@+id/textView13"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <EditText
         android:id="@+id/editTextDate2"
         android:layout_width="100dp"
         android:layout_height="19dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="28dp"
         android:ems="10"
         android:inputType="date"
-        tools:layout_editor_absoluteX="124dp"
-        tools:layout_editor_absoluteY="541dp" />
-
-    <EditText
-        android:id="@+id/editTextTime"
-        android:layout_width="103dp"
-        android:layout_height="18dp"
-        android:ems="10"
-        android:inputType="time"
-        tools:layout_editor_absoluteX="284dp"
-        tools:layout_editor_absoluteY="459dp" />
+        app:layout_constraintEnd_toStartOf="@+id/textView16"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <EditText
         android:id="@+id/editTextTime2"
         android:layout_width="103dp"
         android:layout_height="18dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="time"
-        tools:layout_editor_absoluteX="284dp"
-        tools:layout_editor_absoluteY="542dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView16"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Hora"
+        app:layout_constraintTop_toBottomOf="@+id/textView14"
+        tools:layout_editor_absoluteX="236dp" />
+
+    <EditText
+        android:id="@+id/editTextTime"
+        android:layout_width="103dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="12dp"
+        android:ems="10"
+        android:inputType="time"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toEndOf="@+id/textView13"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
